

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

								 Copyright (C) 2003-2017

                                     Andre Deperrois


*******************************************************************************


xflr5 v6.40 December xxxth, 2017
	- improved the construction method for the wake in the 3d-panel method; makes a small difference to induce drag
	- corrected a potential crash bug when trying to display 3D results of an LLT calculation
	- removed the default suffix "-proj_area" from the name of plane polars
	- restored the output of non-dimensional control derivatives in the operating point properties
	- restored the option to export BL data to text files
	- restored the option to enable or disable autosave which was always turned on
	- included the missing NURBS degrees in the serialization of the body objects
	- added a protection to the max degree of NURBS vs point count
	- code cleaning


xflr5 v6.39 September 14th, 2017
	- Improved the GUI for the plot of BL results in the XFoil Direct Analysis module; corrected a few bugs at the same time
	- modified the calculation of the lift coefficient at each span station in VLM and Panel Analysis.
	  Is now F.dot(SurfaceNormal)/q.S instead of F.dot(WindNormal)/q.S formerly. Increases slightly the viscous drag
	  and the viscous moments as a side effect.
	- implemented a more robust process to save the project files
	- disabled the Neumann boundary condition for the 3d panel method
	- removed the extra 180/PI factor in the calculation of stability time response to initial conditions


xflr5 v6.38 June 5th, 2017
	- fixed the random behaviour bug in the OpenGL view


xflr5 v6.37 May 28th, 2017
	- added a verification of the OpenGL version at startup
	- fixed two bad crash bugs when derotating a foil and when defining a flap


xflr5 v6.36 May 22nd, 2017 - limited release only